--- a/odovzdanie_121032/literatura.bib
+++ b/odovzdanie_121032/literatura.bib
@@ -28,3 +28,11 @@
 	publisher = "A K Peters/CRC Press",
 	year = 2019
 }
+
+@book{Millington,
+	author = " Ian Millington, John Funge",
+	title = "Artificial Intelligence for Games",
+	publisher = "Boca Raton",
+	year = 2009
+}
+
