--- a/odovzdanie_121032/literatura.bib
+++ b/odovzdanie_121032/literatura.bib
@@ -36,3 +36,11 @@
 	year = 2009
 }
 
+@article{phong,
+  title={Animation and computer games design to build awareness of energy conservation},
+  author={Phongthanachote, Chavipa and Rattanadecho, Phadungsak and Com-arch, Chern and Prommas, Ratthasak},
+  journal={Science \& Technology Asia},
+  pages={21--29},
+  year={2019}
+}
+
